--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
+    "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -20,14 +21,14 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "3.2.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src --fix",
+    "lint": "eslint src/**/*.jsx --fix",
     "fmt": "prettier --write src/**/*.jsx"
   },
   "eslintConfig": {
